Top spacing in tablet mode fixed

--- a/less/utilities.less
+++ b/less/utilities.less
@@ -89,6 +89,7 @@ img.navbarlogo{
 }
 
 div.content{
+	margin-top: 20px;
 	margin-bottom: 13%;
 }
 
